test/integration/syntax/stray_unrec1.pal
{6,11}
//

program test(input,outpt);
begin
#	// error

a := 2;
a := 2;
end	// error, missing period
